# LUT-renderer

./: .gitignore  lut-renderer.spec  pyproject.toml  readme.md
docs/: README.md  api-reference.md  architecture.md  development.md
scripts/: build_dir_app.sh  build_onefile_app.sh  clean_pyinstaller.sh  run_built_app.sh
src/lut_renderer/: app.py  ffmpeg.py  icon.py  lut_manager.py  main_window.py  media_info.py  models.py  presets.py  settings.py  smoke.py  task_manager.py  thumbnails.py
